Using description instead of text

--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -3,7 +3,7 @@ title: 'Build An Interactive Prompt'
 id: '11-build-an-interactive-prompt'
 slug: /11-build-an-interactive-prompt
 sidebar_label: Build An Interactive Prompt
-text: 'Working with Selenium straight in code has its advantages. However, if you run into a complicated scenario to automate, it becomes challenging to work through it to completion.'
+description: 'Working with Selenium straight in code has its advantages. However, if you run into a complicated scenario to automate, it becomes challenging to work through it to completion.'
 number: 11
 hide_table_of_contents: true
 level: 2
