--- a/frontend/tips/14-interactive-prompts-revisited/main.mdx
+++ b/frontend/tips/14-interactive-prompts-revisited/main.mdx
@@ -3,7 +3,7 @@ title: 'Interactive Prompts Revisited'
 id: '14-interactive-prompts-revisited'
 slug: /14-interactive-prompts-revisited
 sidebar_label: "Interactive Prompts Revisited"
-text: "In a previous tip we covered how a REPL can help you determine what code to write in your scripts by testing locators and actions through an interactive prompt. This is great for simple tasks, but its starts to falter when debugging more complex scripts."
+description: "In a previous tip we covered how a REPL can help you determine what code to write in your scripts by testing locators and actions through an interactive prompt. This is great for simple tasks, but its starts to falter when debugging more complex scripts."
 hide_table_of_contents: true
 number: 14
 publish_date: 2013-08-27
