--- a/frontend/tips/15-download-secure-files/main.mdx
+++ b/frontend/tips/15-download-secure-files/main.mdx
@@ -3,7 +3,7 @@ title: 'Download Secure Files'
 id: '15-download-secure-files'
 slug: /15-download-secure-files
 sidebar_label: Download Secure Files
-text: "Previously, we've gone over how to test file downloads without a browser by leveraging Selenium Webdriver and an HTTP library in tandem. This approach is great for testing general file downloads, but what if the file you want to download is behind authentication?"
+description: "Previously, we've gone over how to test file downloads without a browser by leveraging Selenium Webdriver and an HTTP library in tandem. This approach is great for testing general file downloads, but what if the file you want to download is behind authentication?"
 number: 15
 hide_table_of_contents: true
 level: 3
