--- a/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
+++ b/frontend/tips/18-how-to-figure-out-what-to-test/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Figure Out What to Test'
 id: '18-what-to-test'
 slug: /18-what-to-test
 sidebar_label: How To Figure Out What to Test
-text: "There is a lot to figure out when it comes to automated web testing, but where do you start? If you've already started, how do you know you're on the right track? And how do you avoid testing everything in every browser without missing important issues?"
+description: "There is a lot to figure out when it comes to automated web testing, but where do you start? If you've already started, how do you know you're on the right track? And how do you avoid testing everything in every browser without missing important issues?"
 number: 18
 hide_table_of_contents: true
 publish_date: 2015-10-13
