--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -3,7 +3,7 @@ title: 'Data Driven Testing'
 id: '19-data-driven-testing'
 slug: /19-data-driven-testing
 sidebar_label: Data Driven Testing
-text: "There are times when you run across functionality you want to test repeatedly with various inputs to see how the system behaves. We're going to go over a way to do this that will take some of the burden out of the process."
+description: "There are times when you run across functionality you want to test repeatedly with various inputs to see how the system behaves. We're going to go over a way to do this that will take some of the burden out of the process."
 number: 19
 hide_table_of_contents: true
 level: 2
