--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Download a File'
 id: '2-download-a-file'
 slug: /2-download-a-file
 sidebar_label: How To Download a File
-text: "Just like with uploading files we hit the same issue with downloading them a dialog box just out of reach of your automation script."
+description: "Just like with uploading files we hit the same issue with downloading them a dialog box just out of reach of your automation script."
 number: 2
 hide_table_of_contents: true
 level: 2
