--- a/frontend/tips/22-locator-strategy/main.mdx
+++ b/frontend/tips/22-locator-strategy/main.mdx
@@ -3,7 +3,7 @@ title: 'Locator Strategy'
 id: '22-locator-strategy'
 slug: /22-locator-strategy
 sidebar_label: Locator Strategy
-text: "In web design CSS (Cascading Style Sheets) is used to apply styles to the markup (HTML) on a page. CSS is able to do this by declaring which bits of the the markup it wants to interact with through the use of selectors."
+description: "In web design CSS (Cascading Style Sheets) is used to apply styles to the markup (HTML) on a page. CSS is able to do this by declaring which bits of the the markup it wants to interact with through the use of selectors."
 number: 22
 hide_table_of_contents: true
 publish_date: 2013-10-22
