--- a/frontend/tips/23-dynamic-pages/main.mdx
+++ b/frontend/tips/23-dynamic-pages/main.mdx
@@ -3,7 +3,7 @@ title: 'Dynamic Pages'
 id: '23-dynamic-pages'
 slug: /23-dynamic-pages
 sidebar_label: Dynamic Pages
-text: "Let's say you want to test some functionality of a web application but it loads things dynamically. You might think about using a hard-coded sleep (that you constantly tweak due to test failures) or you use a blanket timeout that you likely bump up to address test instabilities as well."
+description: "Let's say you want to test some functionality of a web application but it loads things dynamically. You might think about using a hard-coded sleep (that you constantly tweak due to test failures) or you use a blanket timeout that you likely bump up to address test instabilities as well."
 number: 23
 hide_table_of_contents: true
 level: 2
