--- a/frontend/tips/26-cloud/main.mdx
+++ b/frontend/tips/26-cloud/main.mdx
@@ -3,7 +3,7 @@ title: 'Cloud'
 id: '26-cloud'
 slug: /26-cloud
 sidebar_label: Cloud
-text: "In order to test features in a previous version of Chrome, you would need to run a virtual machine (VM) on your computer with a legit version of Windows installed on the VM."
+description: "In order to test features in a previous version of Chrome, you would need to run a virtual machine (VM) on your computer with a legit version of Windows installed on the VM."
 number: 26
 hide_table_of_contents: true
 level: 1
