--- a/frontend/tips/28-upgrading-from-rc/main.mdx
+++ b/frontend/tips/28-upgrading-from-rc/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Upgrade from Selenium RC to WebDriver'
 id: '28-upgrading-from-rc'
 slug: /28-upgrading-from-rc
 sidebar_label: 'Upgrade from Selenium RC to WebDriver'
-text: 'As the Selenium project continues to evolve, Selenium RC is moving closer to end-of-life. This is especially true with the upcoming release of Selenium 3 where minimal support will be offered for RC'
+description: 'As the Selenium project continues to evolve, Selenium RC is moving closer to end-of-life. This is especially true with the upcoming release of Selenium 3 where minimal support will be offered for RC'
 hide_table_of_contents: true
 number: 28
 publish_date: 2015-10-13
