--- a/frontend/tips/32-css-vs-xpath/main.mdx
+++ b/frontend/tips/32-css-vs-xpath/main.mdx
@@ -3,7 +3,7 @@ title: 'CSS vs. Xpath'
 id: 32-css-vs-xpath
 slug: /32-css-vs-xpath
 sidebar_label: 'CSS vs. Xpath'
-text: "One of the most heated and subjective conversations in the Selenium community is which locator strategy is better, often circling around two -- XPath and CSS."
+description: "One of the most heated and subjective conversations in the Selenium community is which locator strategy is better, often circling around two -- XPath and CSS."
 number: 32
 hide_table_of_contents: true
 level: 2
