--- a/frontend/tips/33-css-vs-xpath-2/main.mdx
+++ b/frontend/tips/33-css-vs-xpath-2/main.mdx
@@ -3,7 +3,7 @@ title: 'CSS vs. XPath 2'
 id: '33-css-vs-xpath-2'
 slug: /33-css-vs-xpath-2
 sidebar_label: 'CSS vs. Xpath 2'
-text: "To get a real taste of what the performance difference is between CSS and XPath, we will need to dig deeper. We'll do that by running everything from a local machine while using a performance benchmarking utility."
+description: "To get a real taste of what the performance difference is between CSS and XPath, we will need to dig deeper. We'll do that by running everything from a local machine while using a performance benchmarking utility."
 number: 33
 hide_table_of_contents: true
 level: 2
