--- a/frontend/tips/34-css-vs-xpath-3/main.mdx
+++ b/frontend/tips/34-css-vs-xpath-3/main.mdx
@@ -3,7 +3,7 @@ title: 'CSS vs. XPath 3'
 id: '34-css-vs-xpath-3'
 slug: /34-css-vs-xpath-3
 sidebar_label: 'CSS vs. Xpath 3'
-text: "In the last tip I provided benchmarks that showed XPath and CSS performance across various browsers. Since then I've received feedback on some things that my test was missing -- most notably more browser coverage and testing against a larger and deeper page."
+description: "In the last tip I provided benchmarks that showed XPath and CSS performance across various browsers. Since then I've received feedback on some things that my test was missing -- most notably more browser coverage and testing against a larger and deeper page."
 hide_table_of_contents: true
 number: 34
 publish_date: 2014-01-21
