--- a/frontend/tips/36-available-resources/main.mdx
+++ b/frontend/tips/36-available-resources/main.mdx
@@ -3,7 +3,7 @@ title: 'Selenium Resources'
 id: '36-available-resources'
 slug: /36-available-resources
 sidebar_label: Selenium Resources
-text: 'This is the official Selenium documentation site. There is a lot of helpful information here. Use the sidebar menu on the left to navigate.'
+description: 'This is the official Selenium documentation site. There is a lot of helpful information here. Use the sidebar menu on the left to navigate.'
 number: 36
 hide_table_of_contents: true
 publish_date: 2015-10-13
