--- a/frontend/tips/39-drag-and-drop/main.mdx
+++ b/frontend/tips/39-drag-and-drop/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Test HTML5 Drag and Drop'
 id: '39-drag-and-drop'
 slug: /39-drag-and-drop
 sidebar_label: How to Test HTML5 Drag and Drop
-text: "Exercising a page's drag-and-drop functionality used to be simple with Selenium's Action Builder, but sadly, it won't work with HTML5 drag and drop."
+description: "Exercising a page's drag-and-drop functionality used to be simple with Selenium's Action Builder, but sadly, it won't work with HTML5 drag and drop."
 number: 39
 hide_table_of_contents: true
 level: 2
