--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -3,7 +3,7 @@ title: 'Work With Multiple Windows'
 id: '4-work-with-multiple-windows'
 slug: /4-work-with-multiple-windows
 sidebar_label: Work With Multiple Windows
-text: "This tip will explain how to work with multiple windows in Selenium and switch between them."
+description: "This tip will explain how to work with multiple windows in Selenium and switch between them."
 number: 4
 hide_table_of_contents: true
 level: 2
