--- a/frontend/tips/40-disabled-element/main.mdx
+++ b/frontend/tips/40-disabled-element/main.mdx
@@ -3,7 +3,7 @@ title: 'Disabled Element'
 id: '40-disabled-element'
 slug: /40-disabled-element
 sidebar_label: Disabled Element
-text: "On occasion you may have the need to check if an element on a page is disabled or enabled. Unfortunately, this is not a well-documented function of Selenium, so doing a trivial action like this can quickly become a pain."
+description: "On occasion you may have the need to check if an element on a page is disabled or enabled. Unfortunately, this is not a well-documented function of Selenium, so doing a trivial action like this can quickly become a pain."
 number: 40
 hide_table_of_contents: true
 level: 2
