--- a/frontend/tips/41-one-test-multiple-browsers/main.mdx
+++ b/frontend/tips/41-one-test-multiple-browsers/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Run a Test on Multiple Browsers'
 id: '41-one-test-multiple-browsers'
 slug: /41-one-test-multiple-browsers
 sidebar_label: "How to Run a Test on Multiple Browsers"
-text: "You'll occasionally have something that you want to test across multiple browsers. It would be nice to run your test once and have it execute against all the browsers you care about. Unfortunately this functionality doesn't come out of the box with most testing frameworks."
+description: "You'll occasionally have something that you want to test across multiple browsers. It would be nice to run your test once and have it execute against all the browsers you care about. Unfortunately this functionality doesn't come out of the box with most testing frameworks."
 hide_table_of_contents: true
 number: 41
 publish_date: 2014-03-11
