--- a/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
+++ b/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Run a Test on Multiple Browsers, In Parallel'
 id: '42-one-test-multiple-browsers-parallel'
 slug: /42-one-test-multiple-browsers-parallel
 sidebar_label: "How to Run a Test on Multiple Browsers, In Parallel"
-text: "In the previous tip I covered how to run a single test against multiple browsers. While this could come in handy, it is still a bit lacking."
+description: "In the previous tip I covered how to run a single test against multiple browsers. While this could come in handy, it is still a bit lacking."
 hide_table_of_contents: true
 number: 42
 publish_date: 2014-03-18
