--- a/frontend/tips/45-how-to-test-checkboxes/main.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Test Checkboxes'
 id: '45-checkboxes'
 slug: /45-checkboxes
 sidebar_label: How To Test Checkboxes
-text: "Checkboxes are an often used element in web applications. This guide will show you how to work with them in your Selenium tests."
+description: "Checkboxes are an often used element in web applications. This guide will show you how to work with them in your Selenium tests."
 number: 45
 hide_table_of_contents: true
 level: 1
