--- a/frontend/tips/47-waiting/main.mdx
+++ b/frontend/tips/47-waiting/main.mdx
@@ -3,7 +3,7 @@ title: 'Implicit vs Explicit Waits'
 id: 47-waiting
 slug: /47-waiting
 sidebar_label: Implicit vs Explicit Waits
-text: "In order to make our Selenium tests resilient, we need to make them wait for certain elements to load. Elements that we want to interact with. This is especially true with JavaScript heavy pages."
+description: "In order to make our Selenium tests resilient, we need to make them wait for certain elements to load. Elements that we want to interact with. This is especially true with JavaScript heavy pages."
 number: 47
 hide_table_of_contents: true
 level: 2
