--- a/frontend/tips/48-load-testing/main.mdx
+++ b/frontend/tips/48-load-testing/main.mdx
@@ -3,7 +3,7 @@ title: 'Load Testing'
 id: '48-load-testing'
 slug: /48-load-testing
 sidebar_label: Load Testing
-text: "How do you do load testing in Selenium? While there are plenty of resources citing that while it _can_ be done, there are better tools for the job. Tools like JMeter are often recommended, but they can be intimidating and challenging to get started."
+description: "How do you do load testing in Selenium? While there are plenty of resources citing that while it _can_ be done, there are better tools for the job. Tools like JMeter are often recommended, but they can be intimidating and challenging to get started."
 number: 48
 hide_table_of_contents: true
 level: 3
