--- a/frontend/tips/49-performance-testing/main.mdx
+++ b/frontend/tips/49-performance-testing/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Do Performance Testing'
 id: '49-performance-testing'
 slug: /49-performance-testing
 sidebar_label: How to Do Performance Testing
-text: "Odds are pretty good that your production application has some kind of performance monitoring in place (e.g., New Relic). This goes a long way towards identifying when something detrimental has been released into the wild."
+description: "Odds are pretty good that your production application has some kind of performance monitoring in place (e.g., New Relic). This goes a long way towards identifying when something detrimental has been released into the wild."
 number: 49
 hide_table_of_contents: true
 level: 3
