--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Work With JavaScript Alerts'
 id: '51-javascript-alerts'
 slug: /51-javascript-alerts
 sidebar_label: How To Work With JavaScript Alerts
-text: 'Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your tests can continue unencumbered by dialog boxes that may feel just out of reach.'
+description: 'Built into Selenium is the ability to switch to an alert window and either accept or dismiss it. This way your tests can continue unencumbered by dialog boxes that may feel just out of reach.'
 number: 51
 hide_table_of_contents: true
 publish_date: 2015-07-01
