--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -3,7 +3,7 @@ title: "How to Access Selenium Logs in Real-Time"
 id: "54-logging"
 slug: /54-logging
 sidebar_label: "How to Access Selenium Logs in Real-Time"
-text: "Logging is a deep rabbit hole to fall down in Selenium. The documentation isn't complete and the approach for each of the browser and language bindings is inconsistent and hard to find examples for."
+description: "Logging is a deep rabbit hole to fall down in Selenium. The documentation isn't complete and the approach for each of the browser and language bindings is inconsistent and hard to find examples for."
 hide_table_of_contents: true
 number: 54
 publish_date: 2014-06-10
