--- a/frontend/tips/57-junit-xml/main.mdx
+++ b/frontend/tips/57-junit-xml/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Prepare Your Tests For Continuous Integration'
 id: '57-junit-xml'
 slug: /57-junit-xml
 sidebar_label: "How To Prepare Your Tests For Continuous Integration"
-text: "If you want your Selenium tests to automatically run and report failures to you and your team, you'll want to wire them up to a Continuous Integration server."
+description: "If you want your Selenium tests to automatically run and report failures to you and your team, you'll want to wire them up to a Continuous Integration server."
 number: 57
 hide_table_of_contents: true
 level: 1
