--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -3,7 +3,7 @@ title: 'Broken Images'
 id: '67-broken-images'
 slug: /67-broken-images
 sidebar_label: Broken Images
-text: "Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to test for broken images?"
+description: "Selenium is built to mimic human action (e.g., clicking, typing, dragging, dropping, etc.). So how do you use it to test for broken images?"
 number: 67
 hide_table_of_contents: true
 level: 3
