--- a/frontend/tips/68-load-testing-revisited/main.mdx
+++ b/frontend/tips/68-load-testing-revisited/main.mdx
@@ -3,7 +3,7 @@ title: 'Load Testing Revisited'
 id: '68-load-testing-revisited'
 slug: /68-load-testing-revisited
 sidebar_label: Load Testing Revisited
-text: "In [a previous tip](http://elementalselenium.com/tips/48-load-testing) I demonstrated a way to accomplish a simple load test with a Selenium script and an HTTP library. While it works, it's only useful for rudimentary test cases. For more involved test cases and more powerful load generation, we're going to need something stronger."
+description: "In [a previous tip](http://elementalselenium.com/tips/48-load-testing) I demonstrated a way to accomplish a simple load test with a Selenium script and an HTTP library. While it works, it's only useful for rudimentary test cases. For more involved test cases and more powerful load generation, we're going to need something stronger."
 number: 68
 hide_table_of_contents: true
 level: 3
