--- a/frontend/tips/10-retry-test-actions/main.mdx
+++ b/frontend/tips/10-retry-test-actions/main.mdx
@@ -3,7 +3,7 @@ title: 'Retry Test Actions'
 id: '10-retry-test-actions'
 slug: /10-retry-test-actions
 sidebar_label: Retry Test Actions
-text: "We all write tests with the best intention of having them pass and, when they fail, to reveal legitimate issues in the application we're testing. But that's not always easy to accomplish. Especially when your application is dependent upon third-party service providers (e.g. payment providers, social networks, etc)."
+description: "We all write tests with the best intention of having them pass and, when they fail, to reveal legitimate issues in the application we're testing. But that's not always easy to accomplish. Especially when your application is dependent upon third-party service providers (e.g. payment providers, social networks, etc)."
 number: 10
 hide_table_of_contents: true
 level: 2
