--- a/frontend/tips/21-adding-a-language/main.mdx
+++ b/frontend/tips/21-adding-a-language/main.mdx
@@ -2,7 +2,7 @@
 title: 'How To Pick a Programming Language'
 id: '21-choosing-a-language'
 slug: /21-choosing-a-language
-text: "In order to work well with Selenium you need to choose a programming language to write your acceptance tests in. This guide will help you determine which language to choose for testing."
+description: "In order to work well with Selenium you need to choose a programming language to write your acceptance tests in. This guide will help you determine which language to choose for testing."
 number: 21
 hide_table_of_contents: true
 level: 1
