--- a/frontend/tips/24-rest-apis/main.mdx
+++ b/frontend/tips/24-rest-apis/main.mdx
@@ -3,7 +3,7 @@ title: 'REST APIs'
 id: '24-rest-apis'
 slug: /24-rest-apis
 sidebar_label: REST APIs
-text: "When we list out the properties that make a test a good test, some things that often come up are: Precise. The test should test one thing, and one thing only. A bug in some part of the application that is unrelated to the test should not cause the test to fail."
+description: "When we list out the properties that make a test a good test, some things that often come up are: Precise. The test should test one thing, and one thing only. A bug in some part of the application that is unrelated to the test should not cause the test to fail."
 number: 24
 hide_table_of_contents: true
 level: 2
