--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Speed Up Your Tests With Parallelization'
 id: '27-parallel'
 slug: /27-parallel
 sidebar_label: Parallelization
-text: "Compared to Unit and Integration Tests, Selenium is slow. A single test can easily take minutes to run. And when you have a lot of them, it can quickly compound your suite to take hours to complete (just for a single browser) -- hampering your ability to get fast feedback."
+description: "Compared to Unit and Integration Tests, Selenium is slow. A single test can easily take minutes to run. And when you have a lot of them, it can quickly compound your suite to take hours to complete (just for a single browser) -- hampering your ability to get fast feedback."
 number: 27
 hide_table_of_contents: true
 level: 2
