--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -3,7 +3,7 @@ title: 'ChromeDriver'
 id: 29-chrome-driver
 slug: /29-chrome-driver
 sidebar_label: ChromeDriver
-text: "It's straightforward to get your tests running locally against Firefox. But when you want to run them against a different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and lacking in code examples for getting started."
+description: "It's straightforward to get your tests running locally against Firefox. But when you want to run them against a different browser like Chrome, you quickly run into configuration overhead that can seem overly complex and lacking in code examples for getting started."
 number: 29
 hide_table_of_contents: true
 level: 2
