--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -3,7 +3,7 @@ title: 'Work With Frames'
 id: '3-work-with-frames'
 slug: /3-work-with-frames
 sidebar_label: Work With Frames
-text: "In this tip, you'll learn how to work with frames and write tests against them."
+description: "In this tip, you'll learn how to work with frames and write tests against them."
 number: 3
 hide_table_of_contents: true
 level: 1
