--- a/frontend/tips/30-mobile/main.mdx
+++ b/frontend/tips/30-mobile/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Test Your Mobile App'
 id: 30-mobile
 slug: /30-mobile
 sidebar_label: Mobile
-text: "Mobile is kind of a big deal. And if you haven't needed to test a mobile app yet, it's only a matter of time. But where do you start? And how do you do it in a way that is complimentary to your existing automation and experience?"
+description: "Mobile is kind of a big deal. And if you haven't needed to test a mobile app yet, it's only a matter of time. But where do you start? And how do you do it in a way that is complimentary to your existing automation and experience?"
 number: 30
 hide_table_of_contents: true
 level: 2
