--- a/frontend/tips/31-archives/main.mdx
+++ b/frontend/tips/31-archives/main.mdx
@@ -3,7 +3,7 @@ title: 'Accessing Previous Tips Archive'
 id: '31-archives'
 slug: /31-archives
 sidebar_label: Accessing Previous Tips Archive
-text: "Let me guess you subscribed to a free, weekly Selenium tip newsletter and aren't sure of how to access
+description: "Let me guess you subscribed to a free, weekly Selenium tip newsletter and aren't sure of how to access
 previously written tips or are unaware that this is even a possibility."
 number: 31
 hide_table_of_contents: true
