--- a/frontend/tips/38-headless/main.mdx
+++ b/frontend/tips/38-headless/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Run Your Tests Headless with Xvfb'
 id: '38-headless'
 slug: /38-headless
 sidebar_label: "Headless Xvfb"
-text: "If you want to run your tests headless on a Continuous Integration (CI) server you'll quickly realize that you can't with an out-of-the-box setup since there is no display output for the browser to launch in."
+description: "If you want to run your tests headless on a Continuous Integration (CI) server you'll quickly realize that you can't with an out-of-the-box setup since there is no display output for the browser to launch in."
 hide_table_of_contents: true
 number: 38
 publish_date: 2015-10-14
