--- a/frontend/tips/43-forgot-password/main.mdx
+++ b/frontend/tips/43-forgot-password/main.mdx
@@ -3,7 +3,7 @@ title: 'How to Test Forgot Password'
 id: '43-forgot-password'
 slug: /43-forgot-password
 sidebar_label: "How to Test Forgot Password"
-text: "Testing e-mail can be a tricky process. Especially when dealing with things like forgot password. A lot of times this is something that gets checked manually. Or worse, it gets overlooked and ends up broken in production."
+description: "Testing e-mail can be a tricky process. Especially when dealing with things like forgot password. A lot of times this is something that gets checked manually. Or worse, it gets overlooked and ends up broken in production."
 hide_table_of_contents: true
 number: 43
 publish_date: 2015-10-15
