--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -3,7 +3,7 @@ title: 'Select From A Dropdown'
 id: '5-select-from-a-dropdown'
 slug: /5-select-from-a-dropdown
 sidebar_label: Select From A Dropdown
-text: "Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown menu while online shopping, or selecting your method of payment. And, while selecting from a dropdown list might seem straightforward just grab the list by its element and select an item within it, based on the text you want there's a bit more skill to it."
+description: "Some common use cases for selecting from a dropdown list might be selecting sizes or styles from a dropdown menu while online shopping, or selecting your method of payment."
 number: 5
 hide_table_of_contents: true
 level: 1
