--- a/frontend/tips/52-grid/main.mdx
+++ b/frontend/tips/52-grid/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Use Selenium Grid'
 id: '52-how-to-use-selenium-grid'
 slug: /52-how-to-use-selenium-grid
 sidebar_label: How To Use Selenium Grid
-text: 'With Selenium Grid you can stand up a simple infrastructure of various browsers on different operating systems to not only distribute test load, but also give you a diversity of browsers to work with.'
+description: 'With Selenium Grid you can stand up a simple infrastructure of various browsers on different operating systems to not only distribute test load, but also give you a diversity of browsers to work with.'
 number: 52
 publish_date: 2015-08-25
 hide_table_of_contents: true
