--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -3,7 +3,7 @@ title: 'Wrapper'
 id: '55-wrapper'
 slug: /55-wrapper
 sidebar_label: Wrapper
-text: "There may come a time where you want to access Selenium logs in real time. Although there is a way to do this where you have to explicitly request the logs after each test action, what if we wanted information for every test action?"
+description: "There may come a time where you want to access Selenium logs in real time. Although there is a way to do this where you have to explicitly request the logs after each test action, what if we wanted information for every test action?"
 number: 55
 hide_table_of_contents: true
 level: 2
