--- a/frontend/tips/60-list-tags/main.mdx
+++ b/frontend/tips/60-list-tags/main.mdx
@@ -3,7 +3,7 @@ title: 'List Tags'
 id: '60-list-tags'
 slug: /60-list-tags
 sidebar_label: List Tags
-text: "Tagging is a powerful tool for targeted test execution, as well as a lightweight form of documentation. But what happens when you want to see a summary of the tags you're using across all of your tests? Unfortunately, most solution don't offer this kind of functionality out of the box, leaving you to manually sift through your tests to get a sense of the different tags you're using."
+description: "Tagging is a powerful tool for targeted test execution, as well as a lightweight form of documentation. But what happens when you want to see a summary of the tags you're using across all of your tests? Unfortunately, most solution don't offer this kind of functionality out of the box, leaving you to manually sift through your tests to get a sense of the different tags you're using."
 number: 60
 hide_table_of_contents: true
 level: 3
