--- a/frontend/tips/63-right-click/main.mdx
+++ b/frontend/tips/63-right-click/main.mdx
@@ -3,7 +3,7 @@ title: 'Right Click'
 id: '63-right-click'
 slug: /63-right-click
 sidebar_label: Right Click
-text: "Sometimes you'll run into an app that has functionality hidden behind a right-click menu (a.k.a. a context menu). These menus tend to be system level menus that are untouchable by Selenium. So how do you test this functionality?"
+description: "Sometimes you'll run into an app that has functionality hidden behind a right-click menu (a.k.a. a context menu). These menus tend to be system level menus that are untouchable by Selenium. So how do you test this functionality?"
 number: 63
 hide_table_of_contents: true
 level: 2
