--- a/frontend/tips/65-highlight-elements/main.mdx
+++ b/frontend/tips/65-highlight-elements/main.mdx
@@ -3,7 +3,7 @@ title: 'Highlight Elements'
 id: '65-highlight-elements'
 slug: /65-highlight-elements
 sidebar_label: Highlight Elements
-text: "It's likely that you'll run into odd test behavior that makes you question the locators you're using in a test. But how do you interrogate your locators to make sure they are doing what you expect?"
+description: "It's likely that you'll run into odd test behavior that makes you question the locators you're using in a test. But how do you interrogate your locators to make sure they are doing what you expect?"
 number: 65
 hide_table_of_contents: true
 level: 2
