--- a/frontend/tips/69-safari/main.mdx
+++ b/frontend/tips/69-safari/main.mdx
@@ -3,7 +3,7 @@ title: 'SafariDriver'
 id: '69-safari-driver'
 slug: /69-safari-driver
 sidebar_label: SafariDriver
-text: 'Since Selenium 2.45.0, in order to use SafariDriver, you need to manually install the SafariDriver browser extension.'
+description: 'Since Selenium 2.45.0, in order to use SafariDriver, you need to manually install the SafariDriver browser extension.'
 number: 69
 hide_table_of_contents: true
 level: 1
