--- a/frontend/tips/7-use-a-page-object/main.mdx
+++ b/frontend/tips/7-use-a-page-object/main.mdx
@@ -3,7 +3,7 @@ title: 'Use A Page Object'
 id: '7-use-a-page-object'
 slug: /7-use-a-page-object
 sidebar_label: Use A Page Object
-text: "One of the biggest challenges with Selenium tests is that they can be brittle and challenging to maintain over time.
+description: "One of the biggest challenges with Selenium tests is that they can be brittle and challenging to maintain over time.
 This is largely due to the fact that things in the app you're testing change, breaking your tests."
 number: 7
 hide_table_of_contents: true
