--- a/frontend/tips/71-mobile-testing-pyramid/main.mdx
+++ b/frontend/tips/71-mobile-testing-pyramid/main.mdx
@@ -3,7 +3,7 @@ title: 'The Mobile Testing Pyramid'
 id: '71-mobile-testing-pyramid'
 slug: /71-mobile-testing-pyramid
 sidebar_label: Mobile Testing Pyramid
-text: 'There are loads of trade-offs when it comes to mobile testing. But by learning to use all layers of the mobile testing pyramid to your advantage you can gain the fast feedback that is required in modern CI/CD environments.'
+description: 'There are loads of trade-offs when it comes to mobile testing. But by learning to use all layers of the mobile testing pyramid to your advantage you can gain the fast feedback that is required in modern CI/CD environments.'
 number: 71
 hide_table_of_contents: true
 publish_date: 2017-08-10
