--- a/frontend/tips/72-headless-chrome/main.mdx
+++ b/frontend/tips/72-headless-chrome/main.mdx
@@ -3,7 +3,7 @@ title: 'How To Run Your Tests Headlessly with Chrome'
 id: '72-headless-chrome'
 slug: /72-headless-chrome
 sidebar_label: Headlessly with Chrome
-text: "If you want to run your tests headlessly on a Continuous Integration (CI) server you'll quickly realize that you can't with an out-of-the-box setup since there is no display output for the browser to launch in."
+description: "If you want to run your tests headlessly on a Continuous Integration (CI) server you'll quickly realize that you can't with an out-of-the-box setup since there is no display output for the browser to launch in."
 number: 72
 hide_table_of_contents: true
 publish_date: 2017-09-25
