--- a/frontend/tips/73-open-new-window/main.mdx
+++ b/frontend/tips/73-open-new-window/main.mdx
@@ -3,7 +3,7 @@ title: 'Open a New Window or Tab'
 id: '73-open-new-window'
 slug: /73-open-new-window
 sidebar_label: Open a New Window or Tab
-text: 'Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.'
+description: 'Nearly everyone, at some point during their normal flow of work on the computer, has had to open a new window or tab. In fact, many of us often end up with several tabs open. It makes sense that this should be tested using Selenium.'
 number: 73
 hide_table_of_contents: true
 publish_date: 2023-02-17
