Adding card for tip 1

--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -8,6 +8,7 @@ hide_table_of_contents: true
 level: 1
 number: 1
 publish_date: 2015-07-19
+image: "img/cards/1-upload-a-file.png"
 tags:
   - 'file'
   - 'upload'
