--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -40,6 +40,7 @@ import DisplayTips from '@site/src/components/displayTips';
     {label: 'Java', value: 'java'},
     {label: 'JavaScript', value: 'javascript'},
     {label: 'Ruby', value: 'ruby'},
+    {label: 'Serenity/JS', value: 'serenity-js'},
 ]}/>
 
 ## Expected Behavior
@@ -104,6 +105,13 @@ import DefaultAvatar from "@site/src/components/defaultAvatar";
     imgSrc={"https://github.com/sturman.png"}
     description={"Contributed the initial Java code for this tip."}
     url={"https://github.com/sturman"}
+/>
+
+<DefaultAvatar
+    name="Jan Molak"
+    imgSrc={"https://github.com/jan-molak.png"}
+    description={"Contributed the Serenity/JS code for this tip."}
+    url={"https://github.com/jan-molak"}
 />
 
 ## Authors
