Removing contentPath and getting it from the Docusaurus utilities

--- a/frontend/tips/10-retry-test-actions/main.mdx
+++ b/frontend/tips/10-retry-test-actions/main.mdx
@@ -33,7 +33,7 @@ problem on your hands.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"10-retry-test-actions"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
