--- a/frontend/tips/11-build-an-interactive-prompt/main.mdx
+++ b/frontend/tips/11-build-an-interactive-prompt/main.mdx
@@ -43,7 +43,7 @@ putting them into test code.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"11-build-an-interactive-prompt"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
