--- a/frontend/tips/12-opt-out-of-ab-tests/main.mdx
+++ b/frontend/tips/12-opt-out-of-ab-tests/main.mdx
@@ -49,7 +49,7 @@ Let's start with an example for each approach with a popular A/B testing platfor
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"12-opt-out-of-ab-tests"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
