--- a/frontend/tips/14-interactive-prompts-revisited/main.mdx
+++ b/frontend/tips/14-interactive-prompts-revisited/main.mdx
@@ -38,6 +38,6 @@ solve the error you are experiencing.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"14-interactive-prompts-revisited"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
