--- a/frontend/tips/15-download-secure-files/main.mdx
+++ b/frontend/tips/15-download-secure-files/main.mdx
@@ -35,7 +35,7 @@ Let's continue with some examples.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"15-download-secure-files"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
