--- a/frontend/tips/17-retrieve-http-status-codes/main.mdx
+++ b/frontend/tips/17-retrieve-http-status-codes/main.mdx
@@ -28,7 +28,7 @@ is not available in Selenium WebDriver.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"17-retrieve-http-status-codes"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
