--- a/frontend/tips/19-data-driven-testing/main.mdx
+++ b/frontend/tips/19-data-driven-testing/main.mdx
@@ -38,7 +38,7 @@ hard-coding these values directly in your test code.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"19-data-driven-testing"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
