--- a/frontend/tips/22-locator-strategy/main.mdx
+++ b/frontend/tips/22-locator-strategy/main.mdx
@@ -40,7 +40,7 @@ cross-browser performant, simpler to maintain, and powerful -- that's CSS Select
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"22-locator-strategy"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
