--- a/frontend/tips/27-parallel/main.mdx
+++ b/frontend/tips/27-parallel/main.mdx
@@ -36,7 +36,7 @@ well worth the effort.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"27-parallel"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
