--- a/frontend/tips/29-chrome-driver/main.mdx
+++ b/frontend/tips/29-chrome-driver/main.mdx
@@ -45,7 +45,7 @@ Let's step through an example using ChromeDriver ([download here](https://chrome
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"29-chrome-driver"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
