--- a/frontend/tips/30-mobile/main.mdx
+++ b/frontend/tips/30-mobile/main.mdx
@@ -49,7 +49,7 @@ __NOTE: These examples were borrowed from
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"30-mobile"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
