--- a/frontend/tips/33-css-vs-xpath-2/main.mdx
+++ b/frontend/tips/33-css-vs-xpath-2/main.mdx
@@ -44,6 +44,6 @@ focus on a specific Selenium action rather than the entire test run, and run thi
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"33-css-vs-xpath-2"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
