--- a/frontend/tips/39-drag-and-drop/main.mdx
+++ b/frontend/tips/39-drag-and-drop/main.mdx
@@ -32,7 +32,7 @@ example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"39-drag-and-drop"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
