--- a/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
+++ b/frontend/tips/42-one-test-multiple-browsers-parallel/main.mdx
@@ -37,7 +37,7 @@ and parallelize it with the help of [threads](http://www.tutorialspoint.com/ruby
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"42-one-test-multiple-browsers-parallel"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
