--- a/frontend/tips/43-forgot-password/main.mdx
+++ b/frontend/tips/43-forgot-password/main.mdx
@@ -34,7 +34,7 @@ on [the-internet](https://github.com/saucelabs/the-internet).
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"43-forgot-password"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
