--- a/frontend/tips/47-waiting/main.mdx
+++ b/frontend/tips/47-waiting/main.mdx
@@ -42,7 +42,7 @@ Let's continue with some examples.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"47-waiting"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
