--- a/frontend/tips/54-logging/main.mdx
+++ b/frontend/tips/54-logging/main.mdx
@@ -33,7 +33,7 @@ agnostic way that also gets us the information in real time.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"54-logging"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
