--- a/frontend/tips/55-wrapper/main.mdx
+++ b/frontend/tips/55-wrapper/main.mdx
@@ -27,7 +27,7 @@ for **every** test action?
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"55-wrapper"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
