--- a/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
+++ b/frontend/tips/61-how-to-press-keyboard-keys/main.mdx
@@ -46,7 +46,7 @@ Let's try out a couple of examples.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"61-how-to-press-keyboard-keys"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
