--- a/frontend/tips/63-right-click/main.mdx
+++ b/frontend/tips/63-right-click/main.mdx
@@ -38,7 +38,7 @@ Let's continue with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"63-right-click"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
