--- a/frontend/tips/68-load-testing-revisited/main.mdx
+++ b/frontend/tips/68-load-testing-revisited/main.mdx
@@ -40,7 +40,7 @@ Let's dig in with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"68-load-testing-revisited"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
