--- a/frontend/tips/69-safari/main.mdx
+++ b/frontend/tips/69-safari/main.mdx
@@ -34,7 +34,7 @@ The following example will go through how to do it and make sure it's working.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"69-safari"} languages={[
+<DisplayTips languages={[
     {label: 'Java', value: 'java'},
     {label: 'Ruby', value: 'ruby'},
 ]}/>
