--- a/frontend/tips/7-use-a-page-object/main.mdx
+++ b/frontend/tips/7-use-a-page-object/main.mdx
@@ -39,7 +39,7 @@ And with this approach, we not only get the benefit of controlled chaos, we also
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"7-use-a-page-object"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
