--- a/frontend/tips/72-headless-chrome/main.mdx
+++ b/frontend/tips/72-headless-chrome/main.mdx
@@ -35,7 +35,7 @@ Starting with Chrome 59 (Chrome 60 for Windows) we can pass Chrome a few configu
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"72-headless-chrome"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
