--- a/frontend/tips/9-use-a-base-page-object/main.mdx
+++ b/frontend/tips/9-use-a-base-page-object/main.mdx
@@ -37,7 +37,7 @@ leverage them in any Page Object we see fit.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"9-use-a-base-page-object"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
