--- a/frontend/tips/1-upload-a-file/main.mdx
+++ b/frontend/tips/1-upload-a-file/main.mdx
@@ -44,7 +44,7 @@ __NOTE:__ We are using [a file upload example](https://the-internet.herokuapp.co
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"1-upload-a-file"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
