--- a/frontend/tips/13-how-to-access-basic-auth/main.mdx
+++ b/frontend/tips/13-how-to-access-basic-auth/main.mdx
@@ -39,7 +39,7 @@ level dialog box and avoid setting up a proxy server. This approach will work fo
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"13-how-to-access-basic-auth"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
