--- a/frontend/tips/16-take-screenshot-on-failure/main.mdx
+++ b/frontend/tips/16-take-screenshot-on-failure/main.mdx
@@ -35,7 +35,7 @@ Here is an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"16-take-screenshot-on-failure"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
