--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -34,7 +34,7 @@ Let's explore further with some examples.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"3-work-with-frames"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
