--- a/frontend/tips/32-css-vs-xpath/main.mdx
+++ b/frontend/tips/32-css-vs-xpath/main.mdx
@@ -45,7 +45,7 @@ XPath stack up and fall down. Then we will be able to determine a more helpful l
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"32-css-vs-xpath"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
