--- a/frontend/tips/38-headless/main.mdx
+++ b/frontend/tips/38-headless/main.mdx
@@ -38,7 +38,7 @@ Let's take a look at an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"38-headless"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
