--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -33,7 +33,7 @@ Let's step through a couple of examples to demonstrate.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"4-work-with-multiple-windows"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
