--- a/frontend/tips/40-disabled-element/main.mdx
+++ b/frontend/tips/40-disabled-element/main.mdx
@@ -34,7 +34,7 @@ Let's take a look at how to use it.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"40-disabled-element"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
