--- a/frontend/tips/44-exception-handling/main.mdx
+++ b/frontend/tips/44-exception-handling/main.mdx
@@ -36,7 +36,7 @@ Let's take a look at an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"44-exception-handling"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
