--- a/frontend/tips/45-how-to-test-checkboxes/main.mdx
+++ b/frontend/tips/45-how-to-test-checkboxes/main.mdx
@@ -36,7 +36,7 @@ We're going to go through each of these approaches to see their pros and cons.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"45-how-to-test-checkboxes"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
