--- a/frontend/tips/48-load-testing/main.mdx
+++ b/frontend/tips/48-load-testing/main.mdx
@@ -39,7 +39,7 @@ Let's continue with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"48-load-testing"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
