--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -28,7 +28,7 @@ Let's take a look at a couple of different approaches.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"5-select-from-a-dropdown"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
