--- a/frontend/tips/50-how-to-work-with-hovers/main.mdx
+++ b/frontend/tips/50-how-to-work-with-hovers/main.mdx
@@ -34,7 +34,7 @@ done by telling Selenium which element we want to move the mouse to, and then pe
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"50-how-to-work-with-hovers"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
