--- a/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
+++ b/frontend/tips/51-how-to-work-with-javascript-alerts/main.mdx
@@ -38,7 +38,7 @@ tests can continue unencumbered by dialog boxes that may feel just out of reach.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"51-how-to-work-with-javascript-alerts"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
