--- a/frontend/tips/52-grid/main.mdx
+++ b/frontend/tips/52-grid/main.mdx
@@ -41,7 +41,7 @@ Let's continue with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"52-grid"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'Java', value: 'java'},
     {label: 'JavaScript', value: 'javascript'},
