--- a/frontend/tips/56-retry-failed-tests/main.mdx
+++ b/frontend/tips/56-retry-failed-tests/main.mdx
@@ -34,7 +34,7 @@ Let's continue with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"56-retry-failed-tests"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
