--- a/frontend/tips/67-broken-images/main.mdx
+++ b/frontend/tips/67-broken-images/main.mdx
@@ -42,7 +42,7 @@ Lets look at an example of each.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"67-broken-images"} languages={[
+<DisplayTips languages={[
     {label: 'Ruby', value: 'ruby'},
 ]}/>
 
