--- a/frontend/tips/8-download-a-file-revisited/main.mdx
+++ b/frontend/tips/8-download-a-file-revisited/main.mdx
@@ -42,7 +42,7 @@ Let's continue with an example.
 
 import DisplayTips from '@site/src/components/displayTips';
 
-<DisplayTips contentPath={"8-download-a-file-revisited"} languages={[
+<DisplayTips languages={[
     {label: 'Python', value: 'python'},
     {label: 'C#', value: 'csharp'},
     {label: 'Java', value: 'java'},
