Adding social card for tip 2

--- a/frontend/tips/2-download-a-file/main.mdx
+++ b/frontend/tips/2-download-a-file/main.mdx
@@ -8,6 +8,7 @@ number: 2
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-07-27
+image: "img/cards/2-download-a-file.png"
 tags:
   - 'files'
   - 'downloading'
