Adding social card for tip 3

--- a/frontend/tips/3-work-with-frames/main.mdx
+++ b/frontend/tips/3-work-with-frames/main.mdx
@@ -8,6 +8,7 @@ number: 3
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-08-25
+image: "img/cards/3-work-with-frames.png"
 tags:
   - 'frames'
 category:
