Adding social card for tip 4

--- a/frontend/tips/4-work-with-multiple-windows/main.mdx
+++ b/frontend/tips/4-work-with-multiple-windows/main.mdx
@@ -8,6 +8,7 @@ number: 4
 hide_table_of_contents: true
 level: 2
 publish_date: 2015-08-21
+image: "img/cards/4-work-with-multiple-windows.png"
 tags:
   - 'windows'
   - 'multiple windows'
