Adding social card for tip 5

--- a/frontend/tips/5-select-from-a-dropdown/main.mdx
+++ b/frontend/tips/5-select-from-a-dropdown/main.mdx
@@ -8,6 +8,7 @@ number: 5
 hide_table_of_contents: true
 level: 1
 publish_date: 2015-07-06
+image: "img/cards/5-select-from-a-dropdown.png"
 tags:
   - 'dropdown'
   - 'forms'
